--- a/front/package.json
+++ b/front/package.json
@@ -14,13 +14,16 @@
   },
   "dependencies": {
     "@mercadopago/sdk-react": "^1.0.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.2.0",
     "tactus": "^0.0.3",
     "tailwind-merge": "^3.4.0",
