--- a/front/package.json
+++ b/front/package.json
@@ -19,12 +19,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.2.0",
+    "recharts": "^3.4.1",
     "tactus": "^0.0.3",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0"
