--- a/front/package.json
+++ b/front/package.json
@@ -13,10 +13,12 @@
     "docker:run": "bash ./scripts/docker-run.sh"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@mercadopago/sdk-react": "^1.0.6",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.2",
@@ -30,11 +32,13 @@
     "react": "19.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.1",
     "recharts": "^3.4.1",
     "tactus": "^0.0.3",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
