[lint] fixed lint issues

--- a/front/biome.json
+++ b/front/biome.json
@@ -7,15 +7,13 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "ignore": [
-      "**/*.css"
-    ],
     "includes": [
       "**",
       "!node_modules",
       "!.next",
       "!dist",
-      "!build"
+      "!build",
+      "!**/*.css"
     ]
   },
   "formatter": {
