--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
