--- a/front/package.json
+++ b/front/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
